# genai

./: .gitignore  README.md  pyproject.toml
RAGProject/: app.py  create_db.py
RAGProject/chroma-db/a5ace242-ed81-4be1-8d46-53193d52e37c/: index_metadata.pickle
RAGProject/document loaders/: notes.txt  pdf.py  test.py  webpage.py
RAGProject/retrievers/: test_arxiv.py
RAGProject/vector store/: db.py
chatmodels/: chat.py  chatbotwithui.py  huggingface.py
embeddingsmodels/: embeddings.py
project2/: core.py  corewithstructuredoutput.py  corewithui.py
