[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain>=1.2.17",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
]
